--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Hello world</h1>
-    ul+
+    <ul>
+        <li>Food</li>
+        <li>Game</li>
+        <li>Animal</li>
+        <li>Code</li>
+        <li>Sport</li>
+        <li>Place</li>
+    </ul>
 </body>
 </html>
